partman-base (79) UNRELEASED; urgency=low

  * Suppress error message in the case where /var/lib/partman already
    exists.

 -- Colin Watson <cjwatson@debian.org>  Mon, 23 Jan 2006 13:09:00 +0000

partman-base (78) unstable; urgency=low

  [ Martin Michlmayr ]
  * Move default_visuals from 59 to 58 so ext2r0_visuals can run after
    this script.

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 16 Jan 2006 21:42:12 +0000

partman-base (77) unstable; urgency=low

  [ Colin Watson ]
  * The new update-dev that handles udev has been around for a while, so
    drop old calls to udevstart/udevsynthesize.
  * Use log-output when calling update-dev.

  [ Martin Michlmayr ]
  * Add a definition for mipsel/bcm947xx (msdos).
  * Add a definition for arm/nslu2 and armeb/nslu2 (msdos).

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 14 Jan 2006 23:01:07 +0000

partman-base (76) unstable; urgency=low

  * Unhardcode path to update-dev to allow a smoother transition to a
    generic /bin/update-dev that handles udev too.

  [ Updated translations ]
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Romanian (ro.po) by Eddy Petrişor
  * Russian (ru.po) by Yuri Kozlov
  * Slovak (sk.po) by Peter Mann

 -- Colin Watson <cjwatson@debian.org>  Wed, 30 Nov 2005 21:06:32 +0000

partman-base (75) unstable; urgency=low

  [ Colin Watson ]
  * Clarify partman/confirm to indicate that if you say no you can make
    further changes manually (closes: #329405).
  * Exclude CD/DVD drives from the output of parted_devices.
  * If udevstart is missing, try udevsynthesize instead to try to get udev
    to create pending device nodes.

  [ Sven Luther ]
  * Adapted to chrp_rs6k -> chrp_ibm transition.

  [ Updated translations ]
  * Bulgarian (bg.po) by Ognyan Kulev
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier