@@ -2,6 +2,9 @@ partman-base (79) UNRELEASED; urgency=low
 
   * Suppress error message in the case where /var/lib/partman already
     exists.
+  * definitions.sh (humandev): Handle /dev/hd* and /dev/sd*, which may end
+    up being used on recent versions of the kernel and udev. /dev/hd*
+    requires the busybox patch in #346077.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 23 Jan 2006 13:09:00 +0000
 
